# multi_chain_voting

./: Makefile  README.md  dfx.json  package-lock.json  package.json  tsconfig.json
solidity/: contract.json  contract.sol
src/backend/: Cargo.toml  backend.did  build.rs  generate-candid.sh
src/backend/src/: eth_rpc.rs  lib.rs
src/backend/src/declarations/: evm_rpc.rs  ic_siwe_provider.rs  mod.rs
src/backend/src/service/: save_my_profile.rs
src/frontend/: index.html
src/frontend/src/: App.tsx
src/frontend/src/components/: GitHubIcon.tsx  Spinner.tsx  Voting.css  Voting.jsx  Voting.tsx
src/frontend/src/components/header/: Header.tsx  SessionDialog.tsx
src/frontend/src/components/login/: LoginPage.tsx
src/frontend/src/wagmi/: wagmi.config.ts
