[package]
name = "backend"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.9.0"
ic-stable-structures = "0.6.0"
serde_bytes = "0.11"
hex = "0.4.3"
url = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers-core = "2.0"
futures = "0.3"
getrandom = { version = "0.2", features = ["custom"] }
k256 = "0.13"

[build-dependencies]
dotenv = "0.15.0"
ic-cdk-bindgen = "0.1.3"
